tests/suite/fail/generated/parser/fail_undefined_5.ny
fn main() {
    let x = y5 //~ ERROR undefined variable
}
